# Aind.Behavior.Telekinesis

./: .buildinfo  .copier-answers.yml  .gitignore  README.md  api.html  api.rig.html  api.session.html  api.task_logic.html  dataset.html  genindex.html  index.html  json-schemas.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.bonsai/: Bonsai.config
.doctrees/: api.doctree  api.rig.doctree  api.session.doctree  api.task_logic.doctree  dataset.doctree  environment.pickle  index.doctree  json-schemas.doctree
.github/workflows/: aind-behavior-telekinesis-cicd.yml  ci.yml  docs.yml
_sources/: api.task_logic.rst.txt  dataset.rst.txt  index.rst.txt
_static/: dataset.html  documentation_options.js
bonsai/: Bonsai.config
docs/: api.rig.rst  conf.py  dataset.rst  json-schemas.rst
examples/: 1d_ramp.tiff  clabe.yml  example.py  example_w_luts.py  launcher.py  minimal_2x1.tiff  minimal_2x2.tiff
schema/: aind_behavior_telekinesis.json
scripts/: aind_launcher.py  launcher.ps1
src/: Extensions.csproj  main.bonsai  test_deserialization.bonsai
src/DataSchemas/: aind_behavior_telekinesis.json  aind_telekinesis_rig.json  aind_telekinesis_task_logic.json
src/DataSchemas/aind_behavior_telekinesis/: launcher.py  regenerate.py  rig.py  task_logic.py
src/Extensions/: AdcToVolt.cs  AindBehaviorSessionModel.cs  AindBehaviorTelekinesis.Generated.cs  AindBehaviorTelekinesis.cs  AindManipulator.bonsai  AindManipulatorGui.bonsai  AindTelekinesisRig.cs  AindTelekinesisTaskLogic.cs  BlockLogic.bonsai  CastAsTrialOutcome.cs  ContinuousFeedbackMotorSolver.bonsai  CreateTrial.bonsai  CreateTrialOutcome.cs  DrawReward.bonsai  GetTaskVersion.bonsai  Hardware.bonsai  HarpBehaviorDevice.bonsai  HarpEnvironmentSensor.bonsai  HarpLoadCellsDevice.bonsai  HarpStepperDriverGetMetadata.bonsai  LoadCellsCalibration.bonsai  Logging.bonsai  ModifyBaited.bonsai  MoveAbsoluteSingleAxis.cs  ObserveAccumulationAction.bonsai  ObserveResponse.bonsai  ObserveRoiAction.bonsai  OperationControl.bonsai  OphysInterfaceHandshake.bonsai  OverrideUpperThreshold.cs  ParseAction.cs  ParseActionFromLut.cs  ParseActionFromSampler1D.cs  ParseActionFromSampler2D.cs  ParseForce.cs  ParseLoadCellsCalibration.cs  ParsedAction.cs  ResolveActionOutcome.cs  SampleAction.bonsai  SampleDistribution.cs  (+15 more)
src/aind_behavior_telekinesis/: _helper_types.py  cli.py  regenerate.py  rig.py  task_logic.py
src/aind_behavior_telekinesis/data_contract/: __init__.py
src/aind_behavior_telekinesis/data_qc/: __init__.py  data_qc.py
tests/: test_bonsai.py  test_examples.py
