[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind-behavior-telekinesis"
description = "A library that defines AIND data schema for the brain-computer interface experiments."
authors = [ {name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org"}]
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
  "aind_behavior_services>=0.9, <0.10",
  "numpy",
  "pillow"
]

[project.urls]
Documentation = "https://allenneuraldynamics.github.io/Aind.Behavior.Telekinesis/"
Repository = "https://github.com/AllenNeuralDynamics/Aind.Behavior.Telekinesis/"
Issues = "https://github.com/AllenNeuralDynamics/Aind.Behavior.Telekinesis/issues"
Changelog = "https://github.com/AllenNeuralDynamics/Aind.Behavior.Telekinesis/releases"

[project.optional-dependencies]

launcher = ["aind_behavior_experiment_launcher[aind-services]>=0.3, <0.4"]

dev = [
     "aind_behavior_telekinesis[launcher]",
     "numpy",
     "ruff",
     "codespell",
]


docs = [
    'Sphinx<7.3',
    'furo',
    'sphinx-jinja',
    'autodoc_pydantic[erdantic]',
    'myst_parser',
    'sphinx-jsonschema'
]

[project.scripts]
clabe = "aind_behavior_telekinesis.launcher:main"
regenerate = "aind_behavior_telekinesis.regenerate:main"

[tool.setuptools.packages.find]
where = ["src/DataSchemas"]

[tool.setuptools.dynamic]
version = {attr = "aind_behavior_telekinesis.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build,uv.lock'
ignore-words-list = 'nd'