[build-system]
requires = ["uv_build>=0.8.22"]
build-backend = "uv_build"

[project]
name = "aind-behavior-telekinesis"
description = "A library with a SDK for the Telekinesis behavior task"
authors = [{ name = "Bruno Cruz", email = "bruno.cruz@alleninstitute.org" }]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
]
version = "0.4.0rc5"
readme = { file = "README.md", content-type = "text/markdown" }

dependencies = ["aind_behavior_services>=0.13.5, <0.14", "pydantic-settings"]

[project.urls]
Documentation = "https://allenneuraldynamics.github.io/Aind.Behavior.Telekinesis/"
Repository = "https://github.com/AllenNeuralDynamics/Aind.Behavior.Telekinesis/"
Issues = "https://github.com/AllenNeuralDynamics/Aind.Behavior.Telekinesis/issues"
Changelog = "https://github.com/AllenNeuralDynamics/Aind.Behavior.Telekinesis/releases"

[project.optional-dependencies]

data = ["contraqctor>=0.5.3, <0.6.0", "numpy", "pillow"]

launcher = ["aind-clabe[aind-services]>=0.10.0"]

[dependency-groups]

dev = [
    "aind-behavior-telekinesis[launcher]",
    "aind-behavior-telekinesis[data]",
    "ruff",
    "codespell",
]

docs = [
    'Sphinx',
    'furo',
    'sphinx-jinja',
    'autodoc_pydantic[erdantic]',
    'myst_parser',
    'sphinx-jsonschema',
    "aind-behavior-telekinesis[data]", # Necessary for the data contract rendering
]

[project.scripts]
telekinesis = "aind_behavior_telekinesis.cli:main"

[tool.ruff]
line-length = 120
target-version = 'py311'

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'I']
extend-ignore = []
mccabe = { max-complexity = 14 }
pydocstyle = { convention = 'google' }

[tool.codespell]
skip = '.git,*.pdf,*.svg,./bonsai,*.bonsai,./docs/_build,uv.lock,*Generated.cs'
ignore-words-list = 'nd'

[tool.uv]
default-groups = ['dev']
required-version = '>=0.8.4'
